<resources>
    <string name="app_name">MySQLite</string>
    <string name="tvtitulo">Registro de usuarios</string>
    <string name="etDocument">DOCUMENTO</string>
    <string name="etUsuario">USUARIO</string>
    <string name="etNombres">NOMBRES</string>
    <string name="etApellidos">APELLIDOS</string>
    <string name="etContra">CONTRASEÑA</string>
    <string name="btnReqistrar">Registrar</string>
    <string name="btnBuscar">Buscar</string>
    <string name="btnListarRegistros">Listar</string>
    <string name="btnLimpiar">Limpiar</string>
    <string name="btnActualizar">Actualizar</string>
</resources>